--- a/css/basic.css
+++ b/css/basic.css
@@ -47,7 +47,7 @@ body{
 	background-color: rgba(255, 255, 255, 0.9);
 }
 
-#navbar > span {
+#navbar > a {
 	margin-left: 10%;
 	font-weight: bold;
 	font-size: 30px;
